--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">esc_50.005</string>
-    <string name="action_settings">Settings</string>
+    <string name="faq">FAQ</string>
+    <string name="progress">Progress</string>
+    <string name="sessions">Sessions</string>
+    <string name="course_name">Elements of Software Construction</string>
+    <string name="recyclerViewFaqs">Elements of Software Construction</string>
+
 </resources>
