--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,13 @@
     <string name="course_name">Elements of Software Construction</string>
     <string name="recyclerViewFaqs">Elements of Software Construction</string>
     <string name="title_activity_session">Elements of Software Construction</string>
+    <string name="prompt_password">Password</string>
+    <string name="prompt_email">User Id</string>
+    <string name="action_sign_in_short">Sign In</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
 
 </resources>
