Added feedback use case with fake repository

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="rating_title">Rate today\'s session</string>
+    <string name="rating_message">Any feedback?</string>
 
 </resources>
