--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="feedback">Feedback</string>
     <string name="vertical_ellipsis">&#8942;</string>
+    <string name="courses">Courses</string>
+    <string name="grades">Grades</string>
+    <string name="settings">Settings</string>
+    <string name="log_out">Log out</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
