--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="grades">Grades</string>
     <string name="settings">Settings</string>
     <string name="log_out">Log out</string>
+    <string name="add_new_session">Add new session</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
