--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,10 @@
     <string name="password">Password</string>
     <string name="security_answer">Security Answer</string>
     <string name="current_course_activity">Current Course Activity</string>
+    <string name="current_session">Current Session</string>
+    <string name="end_session">End Session</string>
+    <string name="start_session">Start Session</string>
+    <string name="delete_session">Delete Session</string>
+    <string name="session_id">Get Session Id</string>
 
 </resources>
