--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,6 @@
     <string name="end_session">End Session</string>
     <string name="start_session">Start Session</string>
     <string name="delete_session">Delete Session</string>
-    <string name="session_id">Get Session Id</string>
+    <string name="session_id">Session Id</string>
 
 </resources>
