Added student feedback and changed ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="sessions">Sessions</string>
     <string name="questions">Questions</string>
     <string name="activities">Activities</string>
-    <string name="rating_title">Feedback</string>
+    <string name="rating_title">Session Feedback</string>
     <string name="rating_message">How was the class today?</string>
     <string name="course_name">Course Name</string>
     <string name="recyclerViewFaqs">Elements of Software Construction</string>
