--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="delete_session">Delete Session</string>
     <string name="session_id">Current Session Id</string>
     <string name="application_name">Eureka</string>
+    <string name="session_name">Current Session Name</string>
 
 </resources>
