--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="session_id">Current Session Id</string>
     <string name="application_name">Eureka</string>
     <string name="session_name">Current Session Name</string>
+    <string name="quiz_name">Quiz Name</string>
 
 </resources>
